--- a/beauty.html
+++ b/beauty.html
@@ -101,6 +101,6 @@
         <hr>
         <div class="copy-right">© 2025 www.myntra.com. All rights reserved</div>
     </footer>
-    <script src="index.js"></script>
+    <script src="beauty.js"></script>
 </body>
 </html>
