--- a/main.html
+++ b/main.html
@@ -77,7 +77,13 @@
             <a href="a"><img src="images/o13.jpeg" alt="offer" class="sale-item"></a>
              <a href="a"><img src="images/offer10.webp" alt="offer" class="sale-item"></a>
             <a href="a"><img src="images/o13.jpeg" alt="offer" class="sale-item"></a>
-            
+            <a href="a" src="images/c4.jpeg"></a>
+            <a href="a"><img src="images/c10.webp" alt="offer" class="sale-item"></a>
+            <a href="a"><img src="images/fashioncat.jpeg" alt="offer" class="sale-item"></a>
+            <a href="a"><img src="images/k0.jpg" alt="offer" class="sale-item"></a>
+            <a href="a"><img src="images/k10.jpg" alt="offer" class="sale-item"></a>
+            <a href="a"><img src="images/m6.webp" alt="offer" class="sale-item"></a>
+            <a href="a"><img src="images/o11.webp" alt="offer" class="sale-item"></a>
             
         </div>
 
@@ -103,6 +109,17 @@
             <a href="a"><img src="images/c11.webp" alt="offer" class="sale-item"></a>
              <a href="a"><img src="images/c10.webp" alt="offer" class="sale-item"></a>
             <a href="a"><img src="images/c12.webp" alt="offer" class="sale-item"></a>
+             <a href="a"><img src="images/offer5.jpeg" alt="offer" class="sale-item"></a>
+             <a href="a"><img src="images/offer6.webp" alt="offer" class="sale-item"></a>
+            <a href="a"><img src="images/offer7.webp" alt="offer" class="sale-item"></a>
+             <a href="a"><img src="images/offer8.webp" alt="offer" class="sale-item"></a>
+            <a href="a"><img src="images/ofer9.jpeg" alt="offer" class="sale-item"></a>
+             <a href="a"><img src="images/offer10.webp" alt="offer" class="sale-item"></a>
+            <a href="a"><img src="images/o13.jpeg" alt="offer" class="sale-item"></a>
+             <a href="a"><img src="images/k4.jpg" alt="offer" class="sale-item"></a>
+             <a href="a"><img src="images/w1.webp" alt="offer" class="sale-item"></a>
+            <a href="a"><img src="images/offer2.webp" alt="offer" class="sale-item"></a>
+             <a href="a"><img src="images/fashioncat.jpeg" alt="offer" class="sale-item"></a>
         </div>
 
 
