--- a/home.html
+++ b/home.html
@@ -16,12 +16,12 @@
             <a href="main.html"><img src="images/myntralogo.png" alt="logo" class="myntra-home"></a>
         </div>
         <nav class="navigation-container">
-         <a href="a">Men</a>
-         <a href="a">Women</a>
-         <a href="a">Kids</a>
-         <a href="a">Home & Living</a>
-         <a href="a">Beauty</a>
-         <a href="a">Studio<sup>new</sup></a>
+         <a href="men.html">Men</a>
+         <a href="women.html">Women</a>
+         <a href="kids.html">Kids</a>
+         <a href="home.html">Home & Living</a>
+         <a href="beauty.html">Beauty</a>
+         <a href="studio.html">Studio<sup>new</sup></a>
         </nav>
 
         <div class="search-bar">
@@ -101,6 +101,6 @@
         <hr>
         <div class="copy-right">© 2025 www.myntra.com. All rights reserved</div>
     </footer>
-    <script src="index.js"></script>
+    <script src="home.js"></script>
 </body>
 </html>
